# learningopengl

./: .gitignore  CMakeLists.txt  README.md
shaders/: learning.frag  learning.vert  simple_lit.frag  simple_pos.vert  simple_unlit.frag
src/: camera.h  main.cpp  shader.h
